# gpt-from-scratch

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: config.py
src/model/: attention.py  embeddings.py  utils.py
tests/: test_attention.py  test_embeddings.py
