[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest-cov>=7.1.0",
  "pytest>=9.0.2",
  "ruff>=0.15.7",
]

[project]
dependencies = [
  "numpy>=2.4.3",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "torch>=2.11.0",
]
description = "Add your description here"
name = "gpt-from-scratch"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true
